components/go-analysis/fixtures/good/go.mod
module example.com/standards/good

go 1.23
