components/go-analysis/fixtures/bad/suppression-unused/go.mod
module example.com/standards/bad/suppression-unused

go 1.23
